--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Webservice to integration AppDirect into Netsuite",
   "main": "appdirect.js",
+  "start": "node appdirect.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
