--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Webservice to integration AppDirect into Netsuite",
   "main": "appdirect.js",
-  "start": "node appdirect.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node appdirect.js"
   },
   "repository": {
     "type": "git",
